<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">homework</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logText">log按钮</string>
    <string name="intentText">intent按钮</string>
    <string name="text">按钮</string>
    <string name="dynamic">动态</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="hydt">好友动态</string>
    <string name="fj">附近</string>
    <string name="xqbl">兴趣部落</string>
    <string name="yx">游戏</string>
    <string name="gw">购物</string>
    <string name="yyb">应用宝</string>
    <string name="fjdq">附近的群</string>
    <string name="chwl">吃喝玩乐</string>
    <string name="tcfw">同城服务</string>
    <string name="am_second_tv_t">第二节课</string>
    <string name="am_first_t">第一个作业</string>
    <string name="am_second_t">第二个作业</string>
    <string name="am_third_tv_t">第三节课</string>
    <string name="am_fourth_tv_t">第四节课</string>
<!--     list_items_ll.xml界面里第1个tv的text信息 -->
    <string name="lil_1_tv_t">第1列</string>
    <string name="lil_2_tv_t">第2列</string>
    <string name="lil_3_tv_t">第3列</string>
    </resources>