<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#BBFFFF"
    android:orientation="horizontal"
    tools:context="com.tz.main.MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="#BBFFFF"
        android:gravity="top"
        android:orientation="vertical">
   
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/scoller_ll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            



            <LinearLayout
                android:id="@+id/first_linearlayout1"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:paddingTop="5dp" 
                android:paddingBottom="5dp" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="#bfbfbf" />

                <TextView
                    android:id="@+id/fjdq_tv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/fjdq"
                    android:drawableRight="@drawable/jt"
                    android:gravity="center|left"
                    android:text="@string/yx"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="#bfbfbf" />

                <TextView
                    android:id="@+id/chwl_tv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/chwl"
                    android:drawableRight="@drawable/jt"
                    android:gravity="center|left"
                    android:text="@string/gw"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="#bfbfbf" />

                <TextView
                    android:id="@+id/tcfw_tv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/tcfw"
                    android:drawableRight="@drawable/jt"
                    android:gravity="center|left"
                    android:text="@string/tcfw"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:background="#ffffff"
        android:layout_gravity="left|bottom"
        android:orientation="horizontal" >
<!-- android:layout_marginTop="45dp" -->
        <ImageView
            android:id="@+id/xx_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/text"
            android:src="@drawable/xxw" />

        <ImageView
            android:id="@+id/lxr_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:contentDescription="@string/text"
            android:src="@drawable/lxrw" />

        <ImageView
            android:id="@+id/dt_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:contentDescription="@string/text"
            android:src="@drawable/dtb" />
    </LinearLayout>
</LinearLayout>